fix(federation): associate groups that expected to be associate with all new APIs
APIM-6456